src/companion/assets/css/app.styl
// Remember to use rems and ems. http://css-tricks.com/rems-ems.

@import '~bootstrap/dist/css/bootstrap.css'
@import '~pages/css/pages-icons.css'
@import '~pages/css/pages.css'
//@import '~inspinia/styl/variables.styl'


// http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
*
  -webkit-tap-highlight-color rgba(0,0,0,0)

// Goodness.
*, ::after, ::before
  box-sizing border-box

@media (max-width: 767px) {
  .page-container .page-content-wrapper .content {
     padding-top: 0px;
  }
}

.modal-header.bg-primary
  background-color: $primary

.page-sidebar .sidebar-menu .menu-items > li > a > .title {
   width: 100%;
}

.portlet-progress > .progress-circle-indeterminate,
.portlet-progress > .portlet-bar-indeterminate {
   top: 10em;
}

.table th {

  border-left-color: rgba(230, 230, 230, 0.701961);
  border-left-style: solid;
  border-left-width: 1px;

  border-right-color: rgba(230, 230, 230, 0.701961);
  border-right-style: solid;
  border-right-width: 1px;
}

.table.table-hover tbody tr:hover > td {
  background: #daeffd !important;
}

//combined striped and hover didn't work well on odd rows with default pages
.table.table-striped tbody tr.even > td {
  background: #f9f9f9 !important;
}

.table.table-striped tbody tr.odd > td {
  background: #fff !important;
}

.table.table-hover tbody tr.row-details:hover > td {
 background: #fff !important;
}

.table.dataTable tbody tr td {
 padding-top: 0.25em;
 padding-bottom: 0.25em;
 padding-left: 0.5em;
 padding-right: 0.5em;
}

.form-group-default label.required:after {
  color: #f55753;
  content: " *";
  font-family: arial;
}

/** Adding CSSTransitionGroup breaks collapse/expand implementation try again when that is removed
.newrow-enter > td {
    opacity: 0.1;
}

.newrow-enter.newrow-enter-active > td {
  opacity: 1;
  transition: opacity 2s cubic-bezier(0.68, -0.55, 0.27, 1.55)
}

.newrow-leave {
  opacity: 1;
}

.newrow-leave.newrow-leave-active {
  opacity: 0.01;
  transition: opacity .5s ease-in;
}
*/
input[type="file"].form-control {
  margin-top: .10em;
}

/* Tabs override to look like pages template
   Basically it changes what used to match <ul class="nav-tabs-simple"> to
   <div class="nav-tables-simple>
     ...
     <ul></ul>
*/

.nav-tabs-simple ul {
  border-bottom: 0px;
}
.nav-tabs-simple ul:after {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  width: 100%;
  position: relative;
  bottom: 3px;
  z-index: 120;
}
.nav-tabs-simple ul > li {
  margin-bottom: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);

}
.nav-tabs-simple ul > li:after {
  -webkit-transition: all 0.1s linear 0s;
  transition: all 0.1s linear 0s;
  -webkit-backface-visibility: hidden;
  width: 100%;
  display: block;
  background-color: #f55753;
  height: 0px;
  content: '';
  z-index: 125;
}
.nav-tabs-primary.nav-tabs-simple ul > li:after {
  background-color: #6d5cae;
}
.nav-tabs-success.nav-tabs-simple ul > li:after {
  background-color: #10cfbd;
}
.nav-tabs-complete.nav-tabs-simple ul > li:after {
  background-color: #48b0f7;
}
.nav-tabs-danger.nav-tabs-simple ul > li:after {
  background-color: #f55753;
}
.nav-tabs-warning.nav-tabs-simple ul > li:after {
  background-color: #f8d053;
}
.nav-tabs-info.nav-tabs-simple ul > li:after {
  background-color: #3b4752;
}
.nav-tabs-simple ul > li.active a,
.nav-tabs-simple ul > li.active a:hover,
.nav-tabs-simple ul > li.active a:focus {
  background-color: transparent;
  border-color: transparent;
}
.nav-tabs-simple ul > li.active:after,
.nav-tabs-simple ul > li:hover:after {
  height: 3px;
}
.nav-tabs-simple.nav-tabs-left ul:after,
.nav-tabs-simple.nav-tabs-right ul:after {
  border-bottom: 0px;
}
.nav-tabs-simple.nav-tabs-left ul > li:after,
.nav-tabs-simple.nav-tabs-right ul > li:after {
  width: 0px;
  height: 100%;
  top: 0;
  bottom: 0;
  position: absolute;
}
.nav-tabs-simple.nav-tabs-left ul > li.active:after,
.nav-tabs-simple.nav-tabs-right ul > li.active:after,
.nav-tabs-simple.nav-tabs-left ul > li:hover:after,
.nav-tabs-simple.nav-tabs-right ul > li:hover:after {
  width: 3px;
}
.nav-tabs-simple.nav-tabs-left ul > li:after {
  right: 0;
}
.nav-tabs-simple.nav-tabs-right ul > li:after {
  left: 0;
}

.nav-tabs > li > a {
  padding: 10px 10px;
}

